refactor: 잘못된 베팅 시 베팅 인덱스 증가 방지 및 응답에 requiredBetAmount 포함
- 잘못된 베팅이 발생할 때 betIndex가 증가하지 않도록 BetService 로직 수정
- 사용자에게 필요한 최소 베팅 금액을 알리기 위해 잘못된 베팅 시 requiredBetAmount를 응답에 포함
- 유효한 베팅과 잘못된 베팅을 각각 적절하게 처리하여 정확한 베팅 인덱스 추적 보장